apps/linkwarden/network-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: linkwarden
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
